--- a/artchers/static/style.css
+++ b/artchers/static/style.css
@@ -4,3 +4,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-mosaique {
+    background-image: url(./imgs/main/mosaique.png);
+}
