--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -13,14 +13,13 @@
     <link rel="shortcut icon" href="{%static '/imgs/favicon.ico'%}" type="image/x-icon">
     <link rel="stylesheet" href="{%static 'style.css'%}">
     
-    <script type="module" src="{%static '@splidejs/splide/dist/js/splide.min.js'%}"></script>
     <script src="{% static 'index.js' %}"></script>
 
     {% tailwind_css %}
 
 </head>
 {%block content%}
-<body class="overflow-x-hidden bg-primary font-bebas">
+<body class="overflow-x-hidden bg-primary font-bebas bg-mosaique bg-repeat]">
     
     
     <header class="font-bebas px-10 h-40 py-10">
@@ -85,8 +84,8 @@
 
 
     <footer class="px-10 pt-10 pb-3">
-        <div class="test flex gap-5 transition duration-500 hover:stroke-tertiary hover:text-tertiary hover:fill-tertiary">
-        <div class="flex flex-col border rounded-2xl border-white border-2 px-20 text-center py-3 place-items-center">
+        <div class="flex gap-5">
+        <a href="COUCOU" class="flex flex-col border rounded-2xl border-white border-2 px-20 text-center py-3 place-items-center transition duration-500 hover:stroke-tertiary hover:text-tertiary hover:fill-tertiary">
             <svg height="100px" width="100px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             viewBox="0 0 488 488" xml:space="preserve">
        <g>
@@ -110,7 +109,7 @@
        </g>
        </svg>
             <p class="text-4xl font-bold" >Voter dès maintenant !</p>
-        </div>
+        </a>
         <div class=" grow border rounded-2xl border-white border-2 px-20 text-center py-3">
             <p class="text-4xl">Etat des votes :</p>
             <div class="grid grid-cols-9 place-items-center text-center pt-10">
