--- a/artchers/templates/vote.html
+++ b/artchers/templates/vote.html
@@ -64,102 +64,79 @@
                 </div>
             </div>
 
-
             <div class="border rounded-full border-white border-2 px-20 text-center py-3"><p class="text-xl">Liste BDA Centrale Lille 2023-2024</p></div>
         </div>
     </header>
 
-    
-    <div class="grid grid-cols-2 place-items-center px-5">
+
+    <div class="grid grid-cols-2 place-items-center px-5 py-10">
         <div class="max-w-screen-sm">
-            <h1 class="text-5xl font-bold text-secondary">Bienvenue sur le site de Artchers !</h1>
-            <p class="text-3xl font-semibold text-quaternary py-5">Liste au bureau des arts de l'Ecole Centrale de Lille 2023-2024</p>
-            <p class="text-2xl pb-5">Nous sommes une liste composée de 24 étudiants passionnés et motivés pour faire de Centrale Lille un lieu d'art et de culture !</p>
-            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Consulter notre programme</button>
+            <h1 class="text-5xl font-bold text-secondary">District 1</h1>
+            <p class="text-3xl font-semibold text-quaternary py-5">Devise du district, composition</p>
+            <p class="text-xl pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
+            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl" id="openModal">Voter pour ce district</button>
+
+        </div>
+        <div>
+            <div><img src="{{MEDIA_URL}}/images/test.jpg" alt="blog image" class="rounded-lg h-96 w-full max-h-96 object-fill"></div>
+        </div>
+    </div>
+
+    <div class="grid grid-cols-2 place-items-center px-5 py-20">
+        <div>
+            <div><img src="{{MEDIA_URL}}/images/test.jpg" alt="blog image" class="rounded-lg h-96 w-full max-h-96 object-fill"></div>
         </div>
         <div class="max-w-screen-sm">
-            <img src="{%static 'imgs/main/artchers.png'%}" alt="logo liste">
+            <h1 class="text-5xl font-bold text-secondary">District 1</h1>
+            <p class="text-3xl font-semibold text-quaternary py-5">Devise du district, composition</p>
+            <p class="text-xl pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
+            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Voter pour ce district</button>
+
         </div>
     </div>
 
 
-    <footer class="px-10 pt-10 pb-3">
-        <div class="flex gap-5">
-        <a href="./vote" class="flex flex-col border rounded-2xl border-white border-2 px-20 text-center py-3 place-items-center transition duration-500 hover:stroke-tertiary hover:text-tertiary hover:fill-tertiary">
-            <svg height="100px" width="100px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-            viewBox="0 0 488 488" xml:space="preserve">
-       <g>
-           <g>
-               <path d="M487.9,87.85c0-0.2,0-0.4,0-0.6c0-0.1,0-0.2,0-0.4s-0.1-0.4-0.1-0.6c0-0.1,0-0.3-0.1-0.4c0-0.2-0.1-0.3-0.1-0.5
-                   c0-0.1-0.1-0.3-0.1-0.4c0-0.1-0.1-0.3-0.2-0.4c-0.1-0.2-0.1-0.3-0.2-0.5c-0.1-0.1-0.1-0.2-0.2-0.4c-0.1-0.2-0.2-0.4-0.3-0.5
-                   c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.2-0.2-0.4-0.3-0.5c0,0,0-0.1-0.1-0.1c-0.1-0.1-0.1-0.2-0.2-0.2c-0.1-0.2-0.2-0.3-0.4-0.4
-                   c-0.1-0.1-0.2-0.2-0.3-0.4c-0.1-0.1-0.2-0.2-0.3-0.3c-0.1-0.1-0.3-0.2-0.4-0.4c-0.1-0.1-0.2-0.2-0.3-0.3s-0.3-0.2-0.4-0.3
-                   c-0.1-0.1-0.2-0.2-0.3-0.2c-0.1-0.1-0.3-0.2-0.5-0.3c-0.1-0.1-0.3-0.1-0.4-0.2c-0.1-0.1-0.3-0.1-0.4-0.2c-0.2-0.1-0.3-0.1-0.5-0.2
-                   c-0.1-0.1-0.3-0.1-0.4-0.2c-0.2-0.1-0.3-0.1-0.5-0.2c-0.1,0-0.3-0.1-0.4-0.1c-0.2,0-0.3-0.1-0.5-0.1s-0.3-0.1-0.5-0.1
-                   s-0.3,0-0.5-0.1c-0.2,0-0.4,0-0.6,0c-0.1,0-0.2,0-0.3,0H9.9c-0.1,0-0.2,0-0.3,0c-0.2,0-0.4,0-0.5,0c-0.2,0-0.3,0-0.5,0.1
-                   c-0.2,0-0.3,0-0.5,0.1c-0.2,0-0.4,0.1-0.5,0.1c-0.1,0-0.3,0.1-0.4,0.1c-0.2,0.1-0.4,0.1-0.5,0.2c-0.1,0-0.3,0.1-0.4,0.1
-                   c-0.2,0.1-0.3,0.1-0.5,0.2c-0.1,0.1-0.3,0.1-0.4,0.2c-0.1,0.1-0.3,0.2-0.4,0.2c-0.1,0.1-0.3,0.2-0.4,0.3c-0.1,0.1-0.2,0.2-0.4,0.2
-                   c-0.1,0.1-0.3,0.2-0.4,0.3c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.3,0.2-0.4,0.4c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.2,0.2-0.3,0.4
-                   c-0.1,0.1-0.2,0.3-0.4,0.5c-0.1,0.1-0.1,0.1-0.2,0.2c0,0,0,0.1-0.1,0.1c-0.1,0.2-0.2,0.4-0.3,0.5c-0.1,0.1-0.1,0.2-0.2,0.3
-                   c-0.1,0.2-0.2,0.4-0.3,0.5c-0.1,0.1-0.1,0.2-0.2,0.4c-0.1,0.2-0.1,0.3-0.2,0.5c-0.1,0.1-0.1,0.3-0.2,0.4c0,0.1-0.1,0.3-0.1,0.4
-                   c0,0.2-0.1,0.3-0.1,0.5c0,0.1,0,0.3-0.1,0.4c0,0.2-0.1,0.4-0.1,0.6c0,0.1,0,0.2,0,0.4s0,0.4,0,0.6v0.1v312c0,5.5,4.5,10,10,10h468
-                   c5.5,0,10-4.5,10-10v-312C487.9,87.95,487.9,87.85,487.9,87.85z M446.7,97.95l-202.8,144.6L41.1,97.95H446.7z M467.9,389.95h-448
-                   v-282.6l218.2,155.6c1.7,1.2,3.8,1.9,5.8,1.9s4.1-0.6,5.8-1.9l218.2-155.6V389.95z"/>
-           </g>
-       </g>
-       </svg>
-            <p class="text-4xl font-bold" >Voter dès maintenant !</p>
-        </a>
-        <div class=" grow border rounded-2xl border-white border-2 px-20 text-center py-3">
-            <p class="text-4xl">Etat des votes :</p>
-            <div class="grid grid-cols-9 place-items-center text-center pt-10">
-                <div>
-                    <p class="text-4xl font-bold text-tertiary">District 1</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div>
-                    <p class="text-4xl font-bold text-tertiary">District 2</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 3</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 4</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 5</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 6</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 7</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 8</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 9</p>
-                    <p class="text-3xl">20%</p>
+
+        <footer>
+            <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille</p>
+        </footer>
+
+        <div id="modal" class="fixed top-0 left-0 w-full h-full flex items-center justify-center hidden">
+            <div class="modal-dialog bg-white rounded shadow-lg sm:w-2/3 md:w-1/2 lg:w-1/3 xl:w-1/4">
+                <div class="modal-content p-4">
+                    <h2 class="text-xl font-bold text-secondary">Confirmer votre vote :</h2>
+                    <p>Pour confirmer votre vote veuillez remplir ce formulaire :</p>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{form.mail.label}}
+                        <br>
+                        {{ form.mail }}
+                        <br>
+                        {{form.vote.name}}
+                        <br>
+                        {{ form.vote }}
+                        <br>
+                    <button type="submit" value="Submit" class="bg-green-500 hover:bg-green-700 transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Envoyer</button>
+                    </form>
+                    <button id="closeModal" class="bg-blue-500 hover:bg-blue-700 transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Annuler</button>
                 </div>
             </div>
         </div>
-        </div>
+    
+            <script>
+                const openModalButton = document.getElementById("openModal");
+                const closeModalButton = document.getElementById("closeModal");
+                const modal = document.getElementById("modal");
 
-        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille</p>
-    </footer>
-  
-        
-        
+                openModalButton.addEventListener("click", () => {
+                    modal.classList.remove("hidden");
+                });
 
-
-</body>
-{%endblock%}
-</html>
+                closeModalButton.addEventListener("click", () => {
+                    modal.classList.add("hidden");
+                });
+            </script>
+    
+    </body>
+    {%endblock%}
+    </html>
