--- a/artchers/templates/vote.html
+++ b/artchers/templates/vote.html
@@ -67,13 +67,34 @@
             <div class="border rounded-full border-white border-2 px-20 text-center py-3"><p class="text-xl">Liste BDA Centrale Lille 2023-2024</p></div>
         </div>
     </header>
-
+    {%if successForm == 'True'%}
+    <div class="flex items-center p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50" role="alert">
+        <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+        </svg>
+        <span class="sr-only">Info</span>
+        <div>
+          <span class="font-medium">Vote pris en compte !</span> Vous allez recevoir un mail dans quelques minutes pour confirmer ce vote.
+        </div>
+      </div>
+    {%endif%}
+    {%if successForm == 'AlreadyDone'%}
+    <div class="flex items-center p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50" role="alert">
+        <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+        </svg>
+        <span class="sr-only">Info</span>
+        <div>
+          <span class="font-medium">Attention !</span> Vous avez déjà un vote enregistrée avec cette adresse mail !
+        </div>
+      </div>
+    {%endif%}
 
     <div class="grid grid-cols-2 place-items-center px-5 py-10">
         <div class="max-w-screen-sm">
             <h1 class="text-5xl font-bold text-secondary">District 1</h1>
             <p class="text-3xl font-semibold text-quaternary py-5">Devise du district, composition</p>
-            <p class="text-xl pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
+            <p class="text-lg pb-5 font-montserrat">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
             <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl" id="openModal">Voter pour ce district</button>
 
         </div>
@@ -89,7 +110,7 @@
         <div class="max-w-screen-sm">
             <h1 class="text-5xl font-bold text-secondary">District 1</h1>
             <p class="text-3xl font-semibold text-quaternary py-5">Devise du district, composition</p>
-            <p class="text-xl pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
+            <p class="text-lg pb-5 font-montserrat">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
             <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Voter pour ce district</button>
         </div>
     </div>
