bugfix js vote form

--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -56,7 +56,7 @@
                         </a>
                     </div>
 
-                    <div><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></div>
+                    <div><a href="./"><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></a></div>
                     <div class="inline-flex gap-5 text-xl">
                         <div>Qui sommes-nous ?</div>
                         <div>Nos sponsors</div>
