--- a/artchers/templates/vote.html
+++ b/artchers/templates/vote.html
@@ -58,7 +58,7 @@
                         </a>
                     </div>
 
-                    <div><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></div>
+                    <div><a href="../"><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></a></div>
                     <div class="inline-flex gap-5 text-xl">
                         <div>Qui sommes-nous ?</div>
                         <div>Nos sponsors</div>
@@ -113,7 +113,7 @@
             <h1 class="text-5xl font-bold text-secondary">District 1</h1>
             <p class="text-3xl font-semibold text-quaternary py-5">Devise du district, composition</p>
             <p class="text-lg pb-5 font-montserrat">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis malesuada aliquam. Mauris in felis vel est vestibulum tempor. Vestibulum ante nunc, sodales et risus vel, commodo consequat metus. Vivamus blandit eleifend est, quis aliquet ex egestas facilisis. Morbi sit amet commodo augue. Pellentesque rutrum metus id semper aliquam. Curabitur consectetur egestas sapien vitae fermentum. In ornare neque et varius dapibus. In sapien arcu, egestas sit amet libero sit amet, consectetur elementum enim. Pellentesque ut orci id neque varius ultricies. Suspendisse et vulputate ipsum. In hac habitasse platea dictumst. Curabitur ut justo blandit leo aliquam consequat. Vivamus rhoncus diam enim, at euismod elit porttitor eu. Maecenas congue egestas eros, vel volutpat nisi efficitur gravida.</p>
-            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Voter pour ce district</button>
+            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl" id="openModal">Voter pour ce district</button>
         </div>
     </div>
 
@@ -151,12 +151,15 @@
         </div>
     
             <script>
-                const openModalButton = document.getElementById("openModal");
                 const closeModalButton = document.getElementById("closeModal");
                 const modal = document.getElementById("modal");
 
-                openModalButton.addEventListener("click", () => {
+                const elt = document.querySelectorAll('#openModal')
+
+                elt.forEach(element => {
+                    element.addEventListener("click", () => {
                     modal.classList.remove("hidden");
+                    });
                 });
 
                 closeModalButton.addEventListener("click", () => {
