--- a/artchers/templates/cgi.html
+++ b/artchers/templates/cgi.html
@@ -1,8 +1,6 @@
 {% load static %}
 {% load static tailwind_tags %}
 
-
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -18,7 +16,6 @@
     {% tailwind_css %}
 
 </head>
-{%block content%}
 <body class="overflow-x-hidden bg-primary font-bebas bg-mosaique bg-repeat]">
     
     
@@ -75,78 +72,15 @@
         </div>
     </header>
 
-    
-    <div class="grid grid-cols-2 place-items-center px-5">
-        <div class="max-w-screen-sm">
-            <h1 class="text-5xl font-bold text-secondary">Bienvenue sur le site de Artchers !</h1>
-            <p class="text-3xl font-semibold text-quaternary py-5">Liste au bureau des arts de l'Ecole Centrale de Lille 2023-2024</p>
-            <p class="text-2xl pb-5">Nous sommes une liste composée de 24 étudiants passionnés et motivés pour faire de Centrale Lille un lieu d'art et de culture !</p>
-            <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Consulter notre programme</button>
+
+    <div class="flex flex-col place-items-center">
+        <div>
+        <img src="{%static 'imgs/easter/alex.png'%}" alt="Alexandre a encore trop bu..." class="rounded-lg h-128">
         </div>
-        <div class="max-w-screen-sm">
-            <img src="{%static 'imgs/main/artchers.png'%}" alt="logo liste">
-        </div>
+        <p class="py-5 text-xl">Bon, on a pas de CGI mais on a une jolie photo de notre Président !</p>
     </div>
 
-
-    <footer class="px-10 pt-10 pb-3">
-        <div class="flex gap-5">
-        <a href="./vote" class="flex flex-col border rounded-2xl border-white border-2 px-20 text-center py-3 place-items-center transition duration-500 hover:stroke-tertiary hover:text-tertiary hover:fill-tertiary">
-            <svg height="100px" width="100px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-            viewBox="0 0 488 488" xml:space="preserve">
-       <g>
-           <g>
-               <path d="M487.9,87.85c0-0.2,0-0.4,0-0.6c0-0.1,0-0.2,0-0.4s-0.1-0.4-0.1-0.6c0-0.1,0-0.3-0.1-0.4c0-0.2-0.1-0.3-0.1-0.5
-                   c0-0.1-0.1-0.3-0.1-0.4c0-0.1-0.1-0.3-0.2-0.4c-0.1-0.2-0.1-0.3-0.2-0.5c-0.1-0.1-0.1-0.2-0.2-0.4c-0.1-0.2-0.2-0.4-0.3-0.5
-                   c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.2-0.2-0.4-0.3-0.5c0,0,0-0.1-0.1-0.1c-0.1-0.1-0.1-0.2-0.2-0.2c-0.1-0.2-0.2-0.3-0.4-0.4
-                   c-0.1-0.1-0.2-0.2-0.3-0.4c-0.1-0.1-0.2-0.2-0.3-0.3c-0.1-0.1-0.3-0.2-0.4-0.4c-0.1-0.1-0.2-0.2-0.3-0.3s-0.3-0.2-0.4-0.3
-                   c-0.1-0.1-0.2-0.2-0.3-0.2c-0.1-0.1-0.3-0.2-0.5-0.3c-0.1-0.1-0.3-0.1-0.4-0.2c-0.1-0.1-0.3-0.1-0.4-0.2c-0.2-0.1-0.3-0.1-0.5-0.2
-                   c-0.1-0.1-0.3-0.1-0.4-0.2c-0.2-0.1-0.3-0.1-0.5-0.2c-0.1,0-0.3-0.1-0.4-0.1c-0.2,0-0.3-0.1-0.5-0.1s-0.3-0.1-0.5-0.1
-                   s-0.3,0-0.5-0.1c-0.2,0-0.4,0-0.6,0c-0.1,0-0.2,0-0.3,0H9.9c-0.1,0-0.2,0-0.3,0c-0.2,0-0.4,0-0.5,0c-0.2,0-0.3,0-0.5,0.1
-                   c-0.2,0-0.3,0-0.5,0.1c-0.2,0-0.4,0.1-0.5,0.1c-0.1,0-0.3,0.1-0.4,0.1c-0.2,0.1-0.4,0.1-0.5,0.2c-0.1,0-0.3,0.1-0.4,0.1
-                   c-0.2,0.1-0.3,0.1-0.5,0.2c-0.1,0.1-0.3,0.1-0.4,0.2c-0.1,0.1-0.3,0.2-0.4,0.2c-0.1,0.1-0.3,0.2-0.4,0.3c-0.1,0.1-0.2,0.2-0.4,0.2
-                   c-0.1,0.1-0.3,0.2-0.4,0.3c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.3,0.2-0.4,0.4c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.2,0.2-0.3,0.4
-                   c-0.1,0.1-0.2,0.3-0.4,0.5c-0.1,0.1-0.1,0.1-0.2,0.2c0,0,0,0.1-0.1,0.1c-0.1,0.2-0.2,0.4-0.3,0.5c-0.1,0.1-0.1,0.2-0.2,0.3
-                   c-0.1,0.2-0.2,0.4-0.3,0.5c-0.1,0.1-0.1,0.2-0.2,0.4c-0.1,0.2-0.1,0.3-0.2,0.5c-0.1,0.1-0.1,0.3-0.2,0.4c0,0.1-0.1,0.3-0.1,0.4
-                   c0,0.2-0.1,0.3-0.1,0.5c0,0.1,0,0.3-0.1,0.4c0,0.2-0.1,0.4-0.1,0.6c0,0.1,0,0.2,0,0.4s0,0.4,0,0.6v0.1v312c0,5.5,4.5,10,10,10h468
-                   c5.5,0,10-4.5,10-10v-312C487.9,87.95,487.9,87.85,487.9,87.85z M446.7,97.95l-202.8,144.6L41.1,97.95H446.7z M467.9,389.95h-448
-                   v-282.6l218.2,155.6c1.7,1.2,3.8,1.9,5.8,1.9s4.1-0.6,5.8-1.9l218.2-155.6V389.95z"/>
-           </g>
-       </g>
-       </svg>
-            <p class="text-4xl font-bold" >Voter dès maintenant !</p>
-        </a>
-        <div class=" grow border rounded-2xl border-white border-2 px-20 text-center py-3 place-items-center">
-            <p class="text-4xl">Etat des votes :</p>
-            <div class="grid grid-cols-6 place-items-center text-center pt-10">
-                <div>
-                    <p class="text-4xl font-bold text-tertiary">District 1</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div>
-                    <p class="text-4xl font-bold text-tertiary">District 2</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 3</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 4</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 5</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-                <div> 
-                    <p class="text-4xl font-bold text-tertiary">District 6</p>
-                    <p class="text-3xl">20%</p>
-                </div>
-            </div>
-        </div>
-        </div>
-
+    <footer>
         <div class="flex-col">
             <div></div>
             <div></div>
@@ -154,13 +88,5 @@
             <div></div>
         </div>
 
-        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgi" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
+        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="." class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
     </footer>
-  
-        
-        
-
-
-</body>
-{%endblock%}
-</html>
