--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -22,7 +22,7 @@
 <body class="overflow-x-hidden bg-primary font-bebas bg-mosaique bg-repeat]">
     
     
-    <header class="font-bebas px-10 h-40 py-10">
+    <header class="font-bebas px-10 h-40 py-10 ">
         <div class="flex flex-row justify-between  place-items-center">
             <a class="inline-flex gap-2 border rounded-full border-white border-2 px-32 py-3 hover:text-tertiary transition duration-500" href="COUCOU">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -66,6 +66,7 @@
                     <div class="inline-flex gap-5 text-xl">
                         <div>Trombinoscope</div>
                         <div>Défis</div>
+                        <a href="game">Pac-Man</a>
                     </div>
                 </div>
             </div>
