--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -66,7 +66,7 @@
                     <div class="inline-flex gap-5 text-xl">
                         <div>Trombinoscope</div>
                         <div>Défis</div>
-                        <a href="game">Pac-Man</a>
+                        <a href="game" class="hover:text-tertiary transition duration-500">Pac-Man</a>
                     </div>
                 </div>
             </div>
