fix score bug + translate some variables

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -10,3 +10,13 @@
 .bg-mosaique-f {
     background-image: url(./mosaiquefonce.png);
 }
+
+@layer base {
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button,
+    input[type='number'] {
+      -webkit-appearance: none;
+      margin: 0;
+      -moz-appearance: textfield !important;
+    }
+ }
