--- a/artchers/templates/game.html
+++ b/artchers/templates/game.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load static tailwind_tags %}
+{% load widget_tweaks %}
 
 
 <!DOCTYPE html>
@@ -10,12 +11,13 @@
 
     <link rel="shortcut icon" href="{%static '/imgs/favicon.ico'%}" type="image/x-icon">
     <link rel="stylesheet" href="{%static 'style.css'%}">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     
     <style type="text/css">
       #pacman {
-        height:450px;
-        width:342px;
-        margin:20px auto;
+        height:900px;
+        width:684px;
+        margin:30px auto;
       }
     </style>
 
@@ -24,7 +26,6 @@
 </head>
 
 <body class="overflow-x-hidden bg-primary font-bebas bg-mosaique bg-repeat]">
-  
   <header class="font-bebas px-10 h-40 py-10 ">
     <div class="flex flex-row justify-between  place-items-center">
         <a class="inline-flex gap-2 border rounded-full border-white border-2 px-32 py-3 hover:text-tertiary transition duration-500" href="COUCOU">
@@ -83,9 +84,33 @@
   <script src="{%static 'game/game.js'%}"></script>
   <script src="{%static 'game/modernizr-1.5.min.js'%}"></script>
 
-  <script>
 
+  <div id="modal" class="fixed top-0 left-0 w-full h-full flex items-center justify-center hidden">
+    <div class="modal-dialog bg-white rounded shadow-lg sm:w-2/3 md:w-1/2 lg:w-1/3 xl:w-1/4">
+        <div class="modal-content p-4">
+            <h2 class="text-xl font-bold text-secondary">Confirmer votre vote :</h2>
+            <p>Pour confirmer votre vote veuillez remplir ce formulaire :</p>
+            <form method="post" class="pt-5">
+                {% csrf_token %}
+                <div class="relative z-0 w-full mb-5 group">
+                  {%render_field form.pseudo class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-secondary peer"%}
+                </div>
+                <div class="relative z-0 w-full mb-5 group">
+                  {%render_field form.score id="scoreField" onFocus="this.blur();" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-secondary peer"%}
+                </div>
+            <button type="submit" value="Submit" class="bg-green-500 hover:bg-green-700 transition duration-500 text-white font-bold py-2 px-4 rounded mt-4">Envoyer</button>
+            </form>
+        </div> 
+    </div>
+</div>
+
+  <script>
+    var modal = document.getElementById("modal")
+    var scoreField = document.getElementById("scoreField")
+    var url_game = "{%url 'game'%}"
+    var csrf_tok = '{{csrf_token}}'
     var el = document.getElementById("pacman");
+    
 
     if (Modernizr.canvas && Modernizr.localstorage && 
         Modernizr.audio && (Modernizr.audio.ogg || Modernizr.audio.mp3)) {
@@ -103,6 +128,13 @@
             ["eating", "{%static 'game/audio/eating.mp3'%}"],
             ["eating2", "{%static 'game/audio/eating.mp3'%}"]
         ];
+
+  function sendData(score){
+    console.log(score)
+    modal.classList.remove("hidden");
+    scoreField.setAttribute('value', score);
+
+}
   </script>
 
 
