add some changes

--- a/artchers/templates/game.html
+++ b/artchers/templates/game.html
@@ -64,7 +64,7 @@
                     <div class="inline-flex">
                     <img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="rotate-180 max-w-36">
                     <a href="./"><img src="{%static 'imgs/main/artchers_texte.png'%}" alt="Artchers" class="max-w-36"></a>
-                    <img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="max-w-36">
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="{%static 'imgs/main/fleche_noir.png'%}" alt="fleche" class="max-w-36"></a>
                     </div>
                 </div>
                 <div class="inline-flex gap-5 text-xl">
@@ -126,7 +126,8 @@
             ["eatghost", "{%static 'game/audio/eatghost.mp3'%}"],
             ["eatpill", "{%static 'game/audio/eatpill.mp3'%}"],
             ["eating", "{%static 'game/audio/eating.mp3'%}"],
-            ["eating2", "{%static 'game/audio/eating.mp3'%}"]
+            ["eating2", "{%static 'game/audio/eating.mp3'%}"],
+            ["spies", "{%static 'game/audio/spies.mp3'%}"]
         ];
 
   function sendData(score){
