--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="inline-flex gap-5 text-xl">
                         <div>Trombinoscope</div>
-                        <div>Défis</div>
+                        <a href="https://docs.google.com/spreadsheets/d/1keF1zHBt5TpYmDxTWCPGiVzx4UAdZdJRaW_cQcd41_A/edit?usp=sharing" class="hover:text-tertiary transition duration-500"><div>Défis</div></a>
                         <a href="game" class="hover:text-tertiary transition duration-500">Pac-Man</a>
                     </div>
                 </div>
@@ -148,11 +148,8 @@
         </div>
         </div>
 
-        <div class="flex-col">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="grid grid-rows-1 justify-items-center">
+            <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
         </div>
 
         <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgi" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
