add banderole toutes pages, update cgu

--- a/artchers/templates/cgi.html
+++ b/artchers/templates/cgi.html
@@ -74,19 +74,24 @@
 
 
     <div class="flex flex-col place-items-center">
+        <h1 class="text-center text-secondary text-xl pb-5">Conditions générales d'utilisation </h1>
+        <ul class="max-w-md space-y-1 list-disc list-inside pb-5">
+            <li>
+                <span class="text-tertiary">Hébergement : </span>Association Rézoléo, Avenue Paul Langevin, Ecole Centrale de Lille, 59650 Villeneuve d'Ascq
+            </li>
+            <li>
+                <span class="text-tertiary">Directeur de publication : </span>Monsieur Mathis Rimbert
+            </li>
+        </ul>
         <div>
         <img src="{%static 'imgs/easter/alex.png'%}" alt="Alexandre a encore trop bu..." class="rounded-lg h-128">
         </div>
-        <p class="py-5 text-xl">Bon, on a pas de CGI mais on a une jolie photo de notre Président !</p>
     </div>
 
     <footer>
-        <div class="flex-col">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="grid grid-rows-1 justify-items-center">
+            <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
         </div>
 
-        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="." class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
+        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgu" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
     </footer>
