--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -152,7 +152,7 @@
             <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
         </div>
 
-        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgi" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
+        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgu" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
     </footer>
   
         
