--- a/artchers/templates/badLink.html
+++ b/artchers/templates/badLink.html
@@ -76,9 +76,13 @@
     <div class="flex flex-col place-items-center"><a href="../" class="p-2 px-10 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 text-2xl">Retour au menu</button></a></div>
 
 
-<footer>
-    <p class="text-center pt-10">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille</p>
-</footer>
+    <footer>
+        <div class="grid grid-rows-1 justify-items-center">
+            <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
+        </div>
+
+        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgu" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
+    </footer>
 
     
     
