--- a/artchers/templates/vote.html
+++ b/artchers/templates/vote.html
@@ -127,14 +127,11 @@
 
 
     <footer>
-        <div class="flex-col">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="grid grid-rows-1 justify-items-center">
+            <img src="{%static 'imgs/sponsors/bandereau2.png'%}" alt="Nos sponsors" >
         </div>
 
-        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgi" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
+        <p class="text-center pt-3">© 2024 - Artchers, liste BDA de l'Ecole Centrale de Lille - <a href="cgu" class="hover:text-tertiary transition duration-500">Conditions d'utilisation</a></p>
     </footer>
 
         <div id="modal" class="fixed top-0 left-0 w-full h-full flex items-center justify-center hidden">
