--- a/artchers/templates/index.html
+++ b/artchers/templates/index.html
@@ -35,7 +35,7 @@
             <div class="grow border rounded-full border-white border-2 mx-10 px-5">
                 <div class="flex flex-row justify-between place-items-center">
                     <div class="inline-flex gap-5 text-xl">
-                        <a href="COUCOU" class="hover:text-tertiary">
+                        <a href="https://www.facebook.com/profile.php?id=61556681844629" class="hover:text-tertiary">
                             <svg fill="#000000" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
                             viewBox="0 0 310 310" xml:space="preserve" class="w-6 h-6 hover:fill-tertiary transition duration-500" >
                             <g id="XMLID_834_">
@@ -47,7 +47,7 @@
                             </g>    
                             </svg>
                         </a>
-                        <a href="COUCOU">
+                        <a href="https://www.instagram.com/briqueduwea/">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="w-6 h-6 hover:stroke-tertiary transition duration-500">
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#0F0F0F"/>
                             <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#0F0F0F"/>
@@ -118,7 +118,7 @@
     <div class="grid lg:grid-cols-2 lg:grid-rows-1 place-items-center px-5 align-center lg:align-left">
         <div class="order-2 lg:order-1 max-w-screen-sm">
             <h1 class="text-5xl font-bold text-secondary">Bienvenue sur le site de Artchers !</h1>
-            <p class="text-3xl font-semibold text-quaternary py-5">Liste au bureau des arts de l'Ecole Centrale de Lille 2023-2024</p>
+            <p class="text-3xl font-semibold text-quaternary py-5">Liste au bureau des arts de l'Ecole Centrale de Lille 2024-2025</p>
             <p class="text-2xl pb-5">Nous sommes une liste composée de 24 étudiants passionnés et motivés pour faire de Centrale Lille un lieu d'art et de culture !</p>
             <button class="px-5 py-2 bg-secondary border-secondary text-white rounded-lg inline-block box-border border-2 rounded-x1 hover:bg-primary hover:text-secondary duration-1000 h-14 text-2xl">Consulter notre programme</button>
         </div>
